# SlideGenAI

./: .replit  ai_summarizer.py  data_processor.py  main.py  presentation_generator.py  pyproject.toml  styles.py  utils.py  visualizations.py
.streamlit/: config.toml
