[project]
name = "repl-nix-slidegenai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "plotly>=5.24.1",
    "python-pptx>=1.0.2",
    "streamlit>=1.40.0",
    "tenacity>=9.0.0",
]
